--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>test</title>
+	<title>My Github Page</title>
+<meta charset="utf-8">
 </head>
 <body>
 	<h1>Hello World</h1>
